# auth

./: .env_sample  .gitignore  Cargo.toml  README.md
examples/: authenticate_with_code.rs
src/: lib.rs
tests/: auth_test.rs  generate_code_invalid.rs  generate_code_test.rs
