[package]
name = "mc_auth"
version = "0.1.0"
edition = "2021"
description = "A simple library for authenticating with Mojang's authentication servers."
license = "MIT"
repository = "https://github.com/minecraft-rs/auth"
include = ["/src", "/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"

[dev-dependencies]
dotenv = "0.15.0"
